c4prj2_input/grade.txt
Grading at Fri Jan  3 03:10:13 UTC 2020
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
input.c: In function ‘hand_from_string’:
input.c:7:54: error: expected ‘)’ before ‘!’ token
   while(*str != '\n' && *(str+1) != '\n' && *(str+2) !+- '\n'){
                                                      ^
Compilation of input.c failed

Overall Grade: F
